# excel_word_templater

./: pyproject.toml
.devcontainer/: devcontainer.json
excel_word_templater/: logging_config.py  main.py
